# solpoker

./: .gitignore  DEMO_MODE.md  DEPLOYMENT_SUCCESS.md  ENV_SETUP.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  READ_ME_FIRST.txt  START_HERE.md  START_THE_APP.sh  deployer-keypair.json  package-lock.json  package.json  tailwind.config.js
.cursor/plans/: next-js-solana-poker-b5d943ae.plan.md
.github/workflows/: deploy-devnet.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/api/admin/rake-config/: route.ts
app/api/admin/stats/: route.ts
app/api/auth/wallet/: route.ts
app/api/game/[tournamentId]/action/: route.ts
app/api/game/[tournamentId]/state/: route.ts
app/api/tournaments/: route.ts
app/api/tournaments/[id]/: route.ts
app/api/tournaments/[id]/join/: route.ts
app/create/: page.tsx
app/game/[tournamentId]/: page.tsx  page.tsx.backup
app/lobby/: page.tsx
components/poker/: PokerAssets.tsx
components/providers/: WalletProvider.tsx
lib/: db.ts  tournament-manager.ts
lib/assets/: asset-manager.ts
lib/auth/: wallet-auth.ts
lib/config/: demo.ts
lib/poker-engine/: actions.ts  deck.ts  game-state.ts  hand-evaluator.ts  pot-calculator.ts  types.ts
lib/solana/: config.ts  poker-program.ts
lib/types/: auction.ts
prisma/: schema.prisma  seed.ts
public/assets/poker/: README.md
scripts/: deploy-solana.sh  download-assets.sh
solana-program/: Anchor.toml
solana-program/programs/poker-escrow/: Cargo.toml
solana-program/programs/poker-escrow/src/: lib.rs
(+1 files in other folders)
