[package]
name = "poker-escrow"
version = "0.1.0"
description = "Solana Poker Tournament Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poker_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

